<resources>
    <string name="app_name">Wanderlog</string>
    <string name="add_entry">Add Entry</string>
    <string name="add_entry2">Add Entry</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="save">Save</string>
    <string name="entry_title">Entry Title</string>
    <string name="entry_content">Entry Content</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="pin_description">Pin Description</string>
    <string name="share_pins">Share Pins</string>
    <string name="pins">Pins</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="select_date">Select Date</string>
    <string name="date">Date</string>
</resources>