<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_title"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textViewContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_content"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonEditEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            style="@style/ButtonStyle"
            android:text="@string/edit_entry"
            tools:ignore="ObsoleteLayoutParam" />

        <Button
            android:id="@+id/buttonDeleteEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            style="@style/ButtonStyle"
            android:text="@string/delete_entry"
            tools:ignore="ObsoleteLayoutParam" />

    </LinearLayout>

</LinearLayout>

